Fix double copy paste

BUG: 487181